shamir + namespaces
